dto + working reg and log!
