# docs/swagger.json
@@ -107,7 +107,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.User"
+                            "$ref": "#/definitions/dto.RegisterRequest"
                         }
                     }
                 ],
@@ -115,7 +115,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/domain.User"
+                            "$ref": "#/definitions/dto.UserResponse"
                         }
                     },
                     "400": {
@@ -148,13 +148,30 @@
                 }
             }
         },
-        "domain.User": {
+        "dto.RegisterRequest": {
             "type": "object",
             "required": [
                 "email",
                 "password",
                 "username"
             ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 8
+                },
+                "username": {
+                    "type": "string",
+                    "maxLength": 25,
+                    "minLength": 3
+                }
+            }
+        },
+        "dto.UserResponse": {
+            "type": "object",
             "properties": {
                 "created_at": {
                     "type": "string"
@@ -165,14 +182,8 @@
                 "id": {
                     "type": "integer"
                 },
-                "password": {
-                    "type": "string",
-                    "minLength": 8
-                },
                 "username": {
-                    "type": "string",
-                    "maxLength": 25,
-                    "minLength": 3
+                    "type": "string"
                 }
             }
         }
