# internal/dto/user_dto.go
@@ -1,0 +1,14 @@
+package dto
+
+type RegisterRequest struct {
+	Username string `json:"username" validate:"required,min=3,max=25"`
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=8"`
+}
+
+type UserResponse struct {
+	ID        int    `json:"id"`
+	Username  string `json:"username"`
+	Email     string `json:"email"`
+	CreatedAt string `json:"created_at"`
+}
